--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Trezor Manifest config
 NUXT_ENV_TREZOR_MANIFEST_EMAIL=""
 NUXT_ENV_TREZOR_MANIFEST_APP_URL=""
+
+# Taquito config
+NUXT_ENV_TAQUITO_RPC_URL=""
