Rebrand to Briskett
- Add instructions to disable ad blocker to have Trezor Connect work.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brisket",
+  "name": "briskett",
   "description": "A delicious Tezos interface for the Trezor hardware wallet.",
   "version": "0.2.3",
   "private": true,
