--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.2",
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@taquito/signer": "^9.0.0",
     "@taquito/taquito": "^9.0.0",
+    "@types/chenfengyuan__vue-qrcode": "^1.0.2",
     "@types/node": "^15.0.2",
     "babel-eslint": "^10.1.0",
     "bulma": "^0.9.2",
