--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
     "prettier": "^2.2.1",
+    "sass": "^1.32.13",
     "trezor-connect": "^8.1.26"
   }
 }
