--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^15.0.2",
     "babel-eslint": "^10.1.0",
     "bulma": "^0.9.2",
+    "dayjs": "^1.10.4",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-nuxt": "^2.0.0",
