--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@taquito/signer": "^9.0.0",
     "@taquito/taquito": "^9.0.0",
+    "@types/canvas-confetti": "^1.4.0",
     "@types/chenfengyuan__vue-qrcode": "^1.0.2",
     "@types/node": "^15.0.2",
     "babel-eslint": "^10.1.0",
     "bulma": "^0.9.2",
+    "canvas-confetti": "^1.4.0",
     "dayjs": "^1.10.4",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
