--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "watch": "nuxt",
     "build": "nuxt generate",
-    "start": "nuxt start"
+    "start": "nuxt start",
+    "test": "jest"
   },
   "dependencies": {
     "core-js": "^3.9.1",
@@ -21,9 +22,12 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@taquito/signer": "^9.0.0",
     "@taquito/taquito": "^9.0.0",
+    "@testing-library/vue": "^5.6.2",
     "@types/canvas-confetti": "^1.4.0",
     "@types/chenfengyuan__vue-qrcode": "^1.0.2",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "bulma": "^0.9.2",
     "canvas-confetti": "^1.4.0",
@@ -33,8 +37,12 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "sass": "^1.32.13",
-    "trezor-connect": "^8.1.26"
+    "trezor-connect": "^8.1.26",
+    "ts-jest": "^26.5.6",
+    "ts-node": "^9.1.1",
+    "vue-jest": "^3.0.7"
   }
 }
