Add some tests for the Send page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "types": [
       "@nuxt/types",
       "@types/node",
-			"@types/jest"
+			"@types/jest",
+			"@types/chance"
     ]
   },
   "exclude": [
