--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@taquito/taquito": "^9.0.0",
     "@testing-library/vue": "^5.6.2",
     "@types/canvas-confetti": "^1.4.0",
+    "@types/chance": "^1.1.1",
     "@types/chenfengyuan__vue-qrcode": "^1.0.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.2",
@@ -31,6 +32,7 @@
     "babel-eslint": "^10.1.0",
     "bulma": "^0.9.2",
     "canvas-confetti": "^1.4.0",
+    "chance": "^1.1.7",
     "dayjs": "^1.10.4",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
