Allow for TZ Stats URL to be configurable

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,8 @@
 NUXT_ENV_TREZOR_MANIFEST_EMAIL=""
 NUXT_ENV_TREZOR_MANIFEST_APP_URL=""
 
+# TzStats Config
+NUXT_ENV_TZSTATS_URL="https://api.tzstats.com/"
+
 # Taquito config
 NUXT_ENV_TAQUITO_RPC_URL=""
