--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest": "^27.0.6",
     "prettier": "^2.2.1",
     "sass": "^1.32.13",
+    "tippy.js": "^6.3.1",
     "trezor-connect": "^8.1.26",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.0.0",
