Setup i18n package with English, Spanish, German, and French

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# app domain
+NUXT_ENV_APP_DOMAIN="briskett.app"
+
 # Trezor Manifest config
 NUXT_ENV_TREZOR_MANIFEST_EMAIL=""
 NUXT_ENV_TREZOR_MANIFEST_APP_URL=""
