--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^27.0.6",
+    "locale-emoji": "^0.3.0",
     "nuxt-i18n": "^6.27.2",
     "prettier": "^2.2.1",
     "sass": "^1.32.13",
