--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxt/image": "^0.6.2",
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/pwa": "^3.3.5",
     "@taquito/signer": "^9.0.0",
     "@taquito/taquito": "^9.0.0",
     "@testing-library/vue": "^5.6.2",
