Add NUXT_ENV_INITIAL_CONNECTED_ADDRESS env

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ NUXT_ENV_TZSTATS_URL="https://api.tzstats.com/"
 
 # Taquito config
 NUXT_ENV_TAQUITO_RPC_URL=""
+
+# For easier debugging
+NUXT_ENV_INITIAL_CONNECTED_ADDRESS=""
