--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "version": "0.19.2",
   "private": true,
   "license": "GPL-3.0",
+  "volta": {
+    "node": "16.19.0",
+    "yarn": "3.3.1"
+  },
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "watch": "nuxt",
     "build": "nuxt generate",
