--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@ NUXT_ENV_TREZOR_MANIFEST_EMAIL=""
 NUXT_ENV_TREZOR_MANIFEST_APP_URL=""
 
 # TzStats Config
-NUXT_ENV_TZSTATS_URL="https://api.tzstats.com/"
+NUXT_ENV_TZSTATS_URL="https://api.tzpro.io/"
+NUXT_ENV_TZPRO_API_KEY=""
 
 # Taquito config
 NUXT_ENV_TAQUITO_RPC_URL=""
