made changes in env. file

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ NUXT_ENV_TREZOR_MANIFEST_APP_URL=""
 
 # TzStats Config
 NUXT_ENV_TZPRO_URL="https://api.tzpro.io/"
-NUXT_ENV_TZPRO_API_KEY=" https://docs.tzpro.io/intro/access"
+
+NUXT_ENV_TZPRO_API_KEY="" # https://docs.tzpro.io/intro/access
 
 # Taquito config
 NUXT_ENV_TAQUITO_RPC_URL="https://tezostaquito.io/docs/rpc_nodes/"
