Convert to Astro

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,18 @@
-# app domain
-NUXT_ENV_APP_DOMAIN="briskett.app"
+# Optional - Trezor Manifest config
+PUBLIC_TREZOR_MANIFEST_EMAIL=""
+PUBLIC_TREZOR_MANIFEST_APP_URL=""
 
-# Trezor Manifest config
-NUXT_ENV_TREZOR_MANIFEST_EMAIL=""
-NUXT_ENV_TREZOR_MANIFEST_APP_URL=""
+# The TZ Pro API endpoint and API key
+# These are used to fetch wallet data such as transactions and current balance.
+# Go here to claim a free key: https://docs.tzpro.io/intro/access
+PUBLIC_TZPRO_URL="https://api.tzpro.io/"
+PUBLIC_TZPRO_API_KEY=""
 
-# TzStats Config
-NUXT_ENV_TZPRO_URL="https://api.tzpro.io/"
+# An RPC node to use. This is the server where your transactions will be sent.
+# You may provide the URL of your own personal Tezos RPC Node or use one of the free community
+# run nodes available here: https://tezostaquito.io/docs/rpc_nodes/
+PUBLIC_TAQUITO_RPC_URL=""
 
-NUXT_ENV_TZPRO_API_KEY="" # https://docs.tzpro.io/intro/access
-
-# Taquito config
-NUXT_ENV_TAQUITO_RPC_URL="https://tezostaquito.io/docs/rpc_nodes/"
-
-# For easier debugging
-NUXT_ENV_INITIAL_CONNECTED_ADDRESS=""
+# For easier debugging wallet data without needing to connect a Trezor device.
+# NOTE: For testing Sending and Delegation features, a Trezor device is still required.
+PUBLIC_INITIAL_CONNECTED_ADDRESS=""
