--- a/package.json
+++ b/package.json
@@ -3,52 +3,53 @@
   "description": "A delicious Tezos wallet interface for Trezor.",
   "version": "0.20.0",
   "private": true,
-  "license": "GPL-3.0",
+  "license": "MIT",
   "volta": {
-    "node": "16.19.0",
-    "yarn": "3.3.1"
+    "node": "20.11.0",
+    "yarn": "4.1.0"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=20.x"
   },
+  "packageManager": "yarn@4.1.0",
   "scripts": {
-    "watch": "nuxt",
-    "build": "nuxt generate",
-    "start": "nuxt start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "watch": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "devDependencies": {
-    "@chenfengyuan/vue-qrcode": "1.x",
-    "@nuxt/image": "^0.7.1",
-    "@nuxt/types": "^2.15.3",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/pwa": "^3.3.5",
+    "@astrojs/solid-js": "^4.0.1",
+    "@nanostores/i18n": "^0.12.0",
+    "@nanostores/persistent": "^0.9.1",
+    "@nanostores/router": "^0.13.0",
+    "@nanostores/solid": "^0.4.2",
+    "@solid-primitives/i18n": "^2.0.1",
     "@taquito/signer": "^9.0.0",
     "@taquito/taquito": "^9.0.0",
-    "@testing-library/vue": "^5.6.2",
     "@trezor/connect-web": "^9.1.5",
     "@types/canvas-confetti": "^1.4.0",
     "@types/chance": "^1.1.1",
-    "@types/chenfengyuan__vue-qrcode": "^1.0.2",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
+    "add": "^2.0.6",
+    "astro": "^4.2.6",
     "babel-core": "^6.26.3",
     "bulma": "^0.9.2",
     "canvas-confetti": "^1.4.0",
     "chance": "^1.1.7",
     "dayjs": "^1.10.4",
+    "i18next": "^23.8.1",
     "jest": "^27.0.6",
     "locale-emoji": "^0.3.0",
+    "nanostores": "^0.9.5",
     "nuxt-i18n": "^6.27.2",
     "prettier": "^2.2.1",
+    "qrcode": "^1.5.3",
     "sass": "^1.32.13",
+    "solid-js": "^1.8.12",
     "tippy.js": "^6.3.1",
     "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
-    "vue-jest": "^3.0.7"
+    "ts-node": "^10.0.0"
   }
 }
