--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 	"compilerOptions": {
 		"jsx": "preserve",
 		"jsxImportSource": "solid-js",
-		"allowImportingTsExtensions": true
+		"allowImportingTsExtensions": true,
+		"typeRoots": ["./node_modules/@types", "./@types"]
 	}
 }
