--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-  "name": "briskett",
-  "description": "A delicious Tezos wallet interface for Trezor.",
-  "version": "0.21.0",
-  "private": true,
-  "license": "MIT",
-  "volta": {
-    "node": "20.11.0",
-    "yarn": "4.1.0"
-  },
-  "engines": {
-    "node": ">=20.x"
-  },
-  "packageManager": "yarn@4.1.0",
-  "scripts": {
-    "watch": "astro dev",
-    "build": "rm -rf ./dist && astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "devDependencies": {
-    "@astrojs/check": "^0.4.1",
-    "@astrojs/solid-js": "^4.0.1",
-    "@nanostores/i18n": "^0.12.0",
-    "@nanostores/persistent": "^0.9.1",
-    "@nanostores/router": "^0.13.0",
-    "@nanostores/solid": "^0.4.2",
-    "@solid-primitives/i18n": "^2.0.1",
-    "@taquito/signer": "^9.2.0",
-    "@taquito/taquito": "^9.2.0",
-    "@trezor/connect-web": "^9.1.11",
-    "@types/canvas-confetti": "^1.6.4",
-    "@types/chance": "^1.1.6",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.16",
-    "@types/qrcode": "^1.5.5",
-    "add": "^2.0.6",
-    "astro": "^4.3.1",
-    "babel-core": "^6.26.3",
-    "bulma": "^0.9.4",
-    "canvas-confetti": "^1.9.2",
-    "chance": "^1.1.11",
-    "dayjs": "^1.11.10",
-    "jest": "^27.5.1",
-    "locale-emoji": "^0.3.0",
-    "nanostores": "^0.9.5",
-    "prettier": "^2.8.8",
-    "qrcode": "^1.5.3",
-    "sass": "^1.70.0",
-    "solid-js": "^1.8.12",
-    "tippy.js": "^6.3.7",
-    "ts-jest": "^27.1.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
-  }
+	"name": "briskett",
+	"description": "A delicious Tezos wallet interface for Trezor.",
+	"version": "0.21.0",
+	"private": true,
+	"license": "MIT",
+	"volta": {
+		"node": "20.11.0",
+		"yarn": "4.1.0"
+	},
+	"engines": {
+		"node": ">=20.x"
+	},
+	"packageManager": "yarn@4.1.0",
+	"scripts": {
+		"watch": "astro dev",
+		"build": "rm -rf ./dist && astro check && astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"devDependencies": {
+		"@astrojs/check": "^0.4.1",
+		"@astrojs/solid-js": "^4.0.1",
+		"@nanostores/i18n": "^0.12.0",
+		"@nanostores/persistent": "^0.9.1",
+		"@nanostores/router": "^0.13.0",
+		"@nanostores/solid": "^0.4.2",
+		"@solid-primitives/i18n": "^2.0.1",
+		"@taquito/signer": "^19.0.0",
+		"@taquito/taquito": "^19.0.0",
+		"@trezor/connect-web": "^9.1.11",
+		"@types/canvas-confetti": "^1.6.4",
+		"@types/chance": "^1.1.6",
+		"@types/jest": "^29.5.12",
+		"@types/node": "^20.11.16",
+		"@types/qrcode": "^1.5.5",
+		"add": "^2.0.6",
+		"astro": "^4.3.1",
+		"babel-core": "^6.26.3",
+		"bulma": "^0.9.4",
+		"canvas-confetti": "^1.9.2",
+		"chance": "^1.1.11",
+		"dayjs": "^1.11.10",
+		"jest": "^27.5.1",
+		"locale-emoji": "^0.3.0",
+		"nanostores": "^0.9.5",
+		"prettier": "^2.8.8",
+		"qrcode": "^1.5.3",
+		"sass": "^1.70.0",
+		"solid-js": "^1.8.12",
+		"tippy.js": "^6.3.7",
+		"ts-jest": "^27.1.5",
+		"ts-node": "^10.9.2",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.3"
+	}
 }
