--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
 	"license": "MIT",
 	"volta": {
 		"node": "20.11.0",
-		"yarn": "4.1.0"
+		"pnpm": "8.15.1"
 	},
 	"engines": {
-		"node": ">=20.x"
+		"node": ">=20.x",
+		"pnpm": ">=8.15.1"
 	},
-	"packageManager": "yarn@4.1.0",
+	"packageManager": "pnpm@8.15.1",
 	"scripts": {
 		"watch": "astro dev",
 		"build": "rm -rf ./dist && astro check && astro build",
@@ -26,8 +27,9 @@
 		"@nanostores/router": "^0.13.0",
 		"@nanostores/solid": "^0.4.2",
 		"@solid-primitives/i18n": "^2.0.1",
-		"@taquito/signer": "^19.0.0",
-		"@taquito/taquito": "^19.0.0",
+		"@taquito/rpc": "^9.2.0",
+		"@taquito/signer": "~9.2.0",
+		"@taquito/taquito": "^9.2.0",
 		"@trezor/connect-web": "^9.1.11",
 		"@types/canvas-confetti": "^1.6.4",
 		"@types/chance": "^1.1.6",
@@ -35,23 +37,31 @@
 		"@types/node": "^20.11.16",
 		"@types/qrcode": "^1.5.5",
 		"add": "^2.0.6",
-		"astro": "^4.3.1",
+		"astro": "^4.3.2",
 		"babel-core": "^6.26.3",
+		"buffer": "^6.0.3",
 		"bulma": "^0.9.4",
 		"canvas-confetti": "^1.9.2",
 		"chance": "^1.1.11",
 		"dayjs": "^1.11.10",
-		"jest": "^27.5.1",
+		"events": "^3.3.0",
+		"jest": "^29.7.0",
 		"locale-emoji": "^0.3.0",
+		"lodash-es": "^4.17.21",
 		"nanostores": "^0.9.5",
-		"prettier": "^2.8.8",
+		"node-fetch": "^3.3.2",
+		"os-browserify": "^0.3.0",
+		"prettier": "^3.2.4",
+		"process": "^0.11.10",
 		"qrcode": "^1.5.3",
 		"sass": "^1.70.0",
 		"solid-js": "^1.8.12",
+		"stream-browserify": "^3.0.0",
 		"tippy.js": "^6.3.7",
-		"ts-jest": "^27.1.5",
+		"ts-jest": "^29.1.2",
 		"ts-node": "^10.9.2",
 		"tslib": "^2.6.2",
-		"typescript": "^5.3.3"
+		"typescript": "^5.3.3",
+		"util": "^0.12.5"
 	}
 }
