Only use TzPro for operations list
- Cuts our API usage in half and relies on the RPC node for the bulk of work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
 		"jsx": "preserve",
 		"jsxImportSource": "solid-js",
 		"allowImportingTsExtensions": true,
+		"esModuleInterop": false,
+		"allowSyntheticDefaultImports": true,
 		"typeRoots": ["./node_modules/@types", "./@types"]
 	}
 }
