Move around settings and donation stuff
- Avoid displaying donation stuff it the config doesn't exist for it

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ PUBLIC_TAQUITO_RPC_URL=""
 # For easier debugging wallet data without needing to connect a Trezor device.
 # NOTE: For testing Sending and Delegation features, a Trezor device is still required.
 PUBLIC_INITIAL_CONNECTED_ADDRESS=""
+
+# Donation Stuff
+# ===============
+PUBLIC_DONATION_XTZ_ADDRESS=""
+PUBLIC_DONATION_KOFI_LINK=""
