Update to swap to pro.tzkt.io when an API key is provided

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,11 @@
 PUBLIC_TREZOR_MANIFEST_EMAIL=""
 PUBLIC_TREZOR_MANIFEST_APP_URL=""
 
-# The TZ Pro API endpoint and API key
+# The TzKT API endpoint
 # These are used to fetch wallet data such as transactions and current balance.
-# Go here to claim a free key: https://docs.tzpro.io/intro/access
-PUBLIC_TZPRO_URL="https://api.tzpro.io/"
-PUBLIC_TZPRO_API_KEY=""
+# Go here to get a pro key: https://tzkt.io/api (optional)
+PUBLIC_TZKT_URL="https://api.tzkt.io"
+PUBLIC_TZKTPRO_URL="https://pro.tzkt.io"
 
 # An RPC node to use. This is the server where your transactions will be sent.
 # You may provide the URL of your own personal Tezos RPC Node or use one of the free community
