--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
 	"private": true,
 	"license": "MIT",
 	"volta": {
-		"node": "20.11.0",
-		"pnpm": "8.15.1"
+		"node": "20.11.0"
 	},
+	"packageManager": "pnpm@10.6.5",
 	"engines": {
 		"node": ">=20.x",
 		"pnpm": ">=8.15.1"
 	},
-	"packageManager": "pnpm@8.15.1",
 	"scripts": {
 		"watch": "astro dev",
 		"build": "rm -rf ./dist && astro check && astro build",
@@ -21,29 +20,29 @@
 	},
 	"devDependencies": {
 		"@astrojs/check": "^0.4.1",
-		"@astrojs/solid-js": "^4.0.1",
-		"@nanostores/i18n": "^0.12.0",
+		"@astrojs/solid-js": "^4.4.4",
+		"@nanostores/i18n": "^0.12.2",
 		"@nanostores/persistent": "^0.9.1",
 		"@nanostores/router": "^0.13.0",
 		"@nanostores/solid": "^0.4.2",
-		"@solid-primitives/i18n": "^2.0.1",
+		"@solid-primitives/i18n": "^2.2.0",
 		"@taquito/rpc": "^9.2.0",
 		"@taquito/signer": "~9.2.0",
 		"@taquito/taquito": "^9.2.0",
-		"@trezor/connect-web": "^9.5.0",
-		"@types/canvas-confetti": "^1.6.4",
+		"@trezor/connect-web": "^9.5.3",
+		"@types/canvas-confetti": "^1.9.0",
 		"@types/chance": "^1.1.6",
-		"@types/jest": "^29.5.12",
-		"@types/node": "^20.11.16",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^20.17.25",
 		"@types/qrcode": "^1.5.5",
 		"add": "^2.0.6",
-		"astro": "^4.3.2",
+		"astro": "^4.16.18",
 		"babel-core": "^6.26.3",
 		"buffer": "^6.0.3",
 		"bulma": "^0.9.4",
-		"canvas-confetti": "^1.9.2",
-		"chance": "^1.1.11",
-		"dayjs": "^1.11.10",
+		"canvas-confetti": "^1.9.3",
+		"chance": "^1.1.12",
+		"dayjs": "^1.11.13",
 		"events": "^3.3.0",
 		"jest": "^29.7.0",
 		"locale-emoji": "^0.3.0",
@@ -51,17 +50,17 @@
 		"nanostores": "^0.9.5",
 		"node-fetch": "^3.3.2",
 		"os-browserify": "^0.3.0",
-		"prettier": "^3.2.4",
+		"prettier": "^3.5.3",
 		"process": "^0.11.10",
-		"qrcode": "^1.5.3",
-		"sass": "^1.70.0",
-		"solid-js": "^1.8.12",
+		"qrcode": "^1.5.4",
+		"sass": "^1.86.0",
+		"solid-js": "^1.9.5",
 		"stream-browserify": "^3.0.0",
 		"tippy.js": "^6.3.7",
-		"ts-jest": "^29.1.2",
+		"ts-jest": "^29.2.6",
 		"ts-node": "^10.9.2",
-		"tslib": "^2.6.2",
-		"typescript": "^5.3.3",
+		"tslib": "^2.8.1",
+		"typescript": "^5.8.2",
 		"util": "^0.12.5"
 	}
 }
